Realizado inclusão dos links na página home e criado página história e formulário de reservas.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Chalé Hotel</title>
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
-<body>
+<body id="home">
     <!-- Inicio do Container -->
     <div id="container">
         <!-- Inicio do Topo -->
@@ -13,7 +13,7 @@
             <!-- Inicio da area-logo -->
             <div id="area-logo">
                 <h1 class="logo">
-                    <a href="">Chalé Hotel</a>
+                    <a href="index.html">Chalé Hotel</a>
                 </h1>
             </div>
             <!--/ Fim da area-logo -->
@@ -24,7 +24,9 @@
                     <!-- Inicio do menu-locais -->
                     <div id="menu-locais">
                         <span class="locais">
-                            Rio de Janeiro - São Paulo - Belo Horizonte
+                            <a href="https://www.tripadvisor.com.br/Attractions-g303506-Activities-Rio_de_Janeiro_State_of_Rio_de_Janeiro.html">Rio de Janeiro</a>  - 
+                            <a href="https://www.tripadvisor.com.br/Attractions-g303631-Activities-Sao_Paulo_State_of_Sao_Paulo.html">São Paulo</a>  - 
+                            <a href="https://www.tripadvisor.com.br/Tourism-g303374-Belo_Horizonte_State_of_Minas_Gerais-Vacations.html">Belo Horizonte</a> 
                         </span>
                         <a class="reserva" href="">Reservar</a>
                         <div style="clear: both;"></div>
@@ -33,11 +35,11 @@
                     <!-- Inicio do menu-vertical -->
                     <div id="menu">
                         <ul id="navegacao">
-                            <li><a href="">Home</a></li>
-                            <li><a href="">História</a></li>
-                            <li><a href="">Imprensa</a></li>
-                            <li><a href="">Gastronomia</a></li>
-                            <li><a href="">Contato</a></li>
+                            <li><a id="home" href="index.html">Home</a></li>
+                            <li><a id="historia" href="historia.html">História</a></li>
+                            <li><a id="imprensa" href="">Imprensa</a></li>
+                            <li><a id="gastronomia" href="">Gastronomia</a></li>
+                            <li><a id="contato" href="">Contato</a></li>
                         </ul>
                         <img class="depoimento" src="/imagens/depoimento.png" alt="">
                     </div>
